--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -420,6 +420,18 @@
 		</fieldset>
 		<fieldset name="frontend_item_form" label="FLEXI_ITEM_FORM_FE" icon_class="icon-undo">
 			
+			<field name="" label="" type="separator" default="Compatibility parameters" level="level1" />
+			<field name="use_jimages_fe" type="radio" default="" label="Intro / Full Images" description="Show intro/full images" class="btn-group btn-group-yesno">
+				<option value="">FLEXI_JOOMLA_DEFAULT</option>
+				<option value="0">FLEXI_DISABLE</option>
+				<option value="1">FLEXI_ENABLE</option>
+			</field>
+			<field name="use_jurls_fe" type="radio" default="" label="Urls" description="Show urls" class="btn-group btn-group-yesno">
+				<option value="">FLEXI_JOOMLA_DEFAULT</option>
+				<option value="0">FLEXI_DISABLE</option>
+				<option value="1">FLEXI_ENABLE</option>
+			</field>
+			
 			<field name="" label="" type="separator" default="FLEXI_GENERAL_FORM_BEHAVIOR" level="level1" />
 			
 			<field name="allowbuttons_fe" type="fccheckbox" default="" display_useglobal="1"
@@ -600,7 +612,19 @@
 		</fieldset>
 		<fieldset name="backend_item_form" label="FLEXI_ITEM_FORM_BE" icon_class="icon-redo">
 			
-			<field name="" type="separator" default="FLEXI_STYLING" label="" level="level2" />
+			<field name="" label="" type="separator" default="Compatibility parameters" level="level1" />
+			<field name="use_jimages_be" type="radio" default="" label="Intro / Full Images" description="Show intro/full images" class="btn-group btn-group-yesno">
+				<option value="">FLEXI_JOOMLA_DEFAULT</option>
+				<option value="0">FLEXI_DISABLE</option>
+				<option value="1">FLEXI_ENABLE</option>
+			</field>
+			<field name="use_jurls_be" type="radio" default="" label="Urls" description="Show urls" class="btn-group btn-group-yesno">
+				<option value="">FLEXI_JOOMLA_DEFAULT</option>
+				<option value="0">FLEXI_DISABLE</option>
+				<option value="1">FLEXI_ENABLE</option>
+			</field>
+			
+			<field name="" type="separator" default="FLEXI_STYLING" label="" level="level1" />
 			<field name="form_extra_css_be" type="textarea" default="" rows="5" cols="60" label="FLEXI_EDIT_FORM_CSS" description="FLEXI_EDIT_FORM_CSS_DESC" />
 			<field name="form_extra_js_be" type="textarea" default="" rows="5" cols="60" label="FLEXI_EDIT_FORM_JS" description="FLEXI_EDIT_FORM_JS_DESC" />
 			
