--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -437,7 +437,12 @@ html button {
 #flexi_form_submit_btns {
 	font-size:11px;
 }
-
+.ajax-loader {
+	background: url("../images/ajax-loader.gif") no-repeat scroll left center transparent;
+	height: 16px;
+	padding: 0 0 0 20px;
+	display: inline-block;
+}
 
 
 /*******************************
