Added inline description in (legacy tabled based view) tags menu item and in component parameters for creating a default menu item for tags that do not have a specific menu item

--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -564,6 +564,7 @@ div.control-group:first-of-type > div > .fcsep_level0, div.control-group:first-o
 body .alert.fcpadded {
 	margin: 0px 48px;
 	box-sizing: border-box;
+	max-width: 92%;
 }
 body .alert.fcinlineblock {
 	display: inline-block;
