Fixed v3.0.9-rc bug, url not shown in file field until item form is saved, and improved preview feature of file, minigallery fields

--- a/site/assets/css/flexi_form_fields.css
+++ b/site/assets/css/flexi_form_fields.css
@@ -339,6 +339,12 @@ table.img_upload_select {
 
 
 /* FIELDs: (file-based fields) */
+#flexicontent .fc_filedata_title {
+	font-size:90%;
+	display:inline-block;
+	margin:0;
+	padding: 2px 0px 0px 12px;
+}
 #flexicontent .fc_filedata_txt.invalid {
 	color: red;
 	font-weight: normal;
